--- a/assets/css/navs/global.css
+++ b/assets/css/navs/global.css
@@ -8,6 +8,89 @@ header{
     padding: 0 100px;
 }
 header img {
-    width: 150px;
-    height: 50px;
+    width: 180px;
+    height: 40px;
+}
+
+.hamburger{
+    display:none;
+
+}
+
+.nav-bar ul{
+    display: flex;
+}
+
+.nav-bar ul li a{
+    display: block;
+    color: #F9A826;
+    font-size: 15px;
+    padding: 10px 20px;
+    border-radius: 15px;
+    transition: 0.3s;
+    font-weight: 500;
+    margin: 0 5px;
+    margin-top: 25px;
+    text-decoration: none;
+
+}
+
+.nav-bar ul li a:hover{
+    color:#fff;
+    background-color: #F9A826;
+}
+
+
+@media only screen and (max-width:1320px) {
+    header{
+        padding: 0 50px;
+    }
+}
+@media only screen and (max-width:1100px) {
+    header{
+        padding: 0 50px;
+    }
+}
+
+@media only screen and (max-width:900px) {
+    .hamburger{
+        display: block;
+        cursor: pointer;
+    }
+    .hamburger .line{
+        width: 30px;
+        height: 3px;
+        background: #F9A826;
+        margin: 6px 0;
+    }
+    .nav-bar{
+        height: 0px;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        width: 100vw;
+        right: 0;
+        left: 0;
+        overflow: hidden;
+        background: rgb(253, 253, 253);
+        transition: 0.3s;
+    }
+    .nav-bar.active{
+        height: 450px;
+
+    }
+    .nav-bar ul{
+        display: block;
+        width: fit-content;
+        margin: 80px auto 0 auto;
+        text-align: center;
+        opacity: 0;
+        transition: 0.5s;
+    }
+    .nav-bar.active ul{
+        opacity: 1;
+    }
+    .nav-bar ul li a{
+        margin-bottom: 12px;
+    }
 }
