--- a/assets/css/navs/navbar_global.css
+++ b/assets/css/navs/navbar_global.css
@@ -8,7 +8,7 @@ header{
     padding: 0 100px;
 }
 header img {
-    width: 180px;
+    width: 210px;
     height: 40px;
 }
 
@@ -40,6 +40,17 @@ header img {
     background-color: #F9A826;
 }
 
+.nav-bar .masuk{
+    color: #fff;
+    background-color: #F9A826;
+    border: 2px solid #F9A826;
+}
+.nav-bar .register{
+    color: #F9A826;
+    background-color: #fff;
+    border: 2px solid #F9A826;
+}
+
 
 @media only screen and (max-width:1320px) {
     header{
@@ -53,6 +64,13 @@ header img {
 }
 
 @media only screen and (max-width:900px) {
+    header{
+        padding: 0 45px;
+    }
+    header img{
+        width: 180px;
+        height: 35px;
+    }
     .hamburger{
         display: block;
         cursor: pointer;
@@ -82,7 +100,7 @@ header img {
     .nav-bar ul{
         display: block;
         width: fit-content;
-        margin: 80px auto 0 auto;
+        margin: 40px auto 0 auto;
         text-align: center;
         opacity: 0;
         transition: 0.5s;
