--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -48,7 +48,9 @@
     background: linear-gradient(90deg, rgba(255,239,0,1) 0%, rgba(249,168,38,1) 100%);
     border-radius: 30px;
 }
-
+.title-m{
+    font-weight: 700;
+}
 
 @media only screen and (max-width:900px) {
     .mckup{
