--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -10912,3 +10912,11 @@ textarea.form-control-lg {
 }
 
 /*# sourceMappingURL=bootstrap.css.map */
+
+.mb-6 {
+  margin-bottom: 6rem !important;
+}
+
+.mt-8 {
+  margin-top: 12rem !important;
+}
