--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -7756,6 +7756,14 @@ textarea.form-control-lg {
   margin-bottom: 3rem !important;
 }
 
+.mb-6 {
+  margin-bottom: 6rem !important;
+}
+
+.mb-7 {
+  margin-bottom: 12rem !important;
+}
+
 .mb-auto {
   margin-bottom: auto !important;
 }
