--- a/assets/css/temukan.css
+++ b/assets/css/temukan.css
@@ -40,7 +40,7 @@
   margin-top: 1em;
   padding: 1em;
   border-radius: 20px;
-  border:none;
+  border:1px solid black;
   box-shadow: 1em 2em 2.5em rgba(1, 2, 68, 0.08);
 }
 .image-container {
