--- a/assets/css/navs/navbar_global.css
+++ b/assets/css/navs/navbar_global.css
@@ -58,6 +58,11 @@ header img {
     border: 2px solid #F9A826;
 }
 
+.nav-bar #title_name{
+    color: #F9A826;
+    background-color: #fff;
+    border: 0px;
+}
 
 @media only screen and (max-width:1320px) {
     header{
