--- a/assets/cards/css/lost.css
+++ b/assets/cards/css/lost.css
@@ -137,3 +137,28 @@ h1.heading {
   transform: scale(1.02);
   color: #F9A826 !important;
 }
+
+
+/* For Button Modal tapi gagal */
+.btn-more-info{
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #fff !important;
+  /* --bs-btn-border-color: #F9A826 !important; */
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #fff !important;
+  --bs-btn-hover-border-color: #fff !important;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #fff !important;
+  --bs-btn-active-border-color: #fff !important;
+  /* --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); */
+}
+
+.btn-more-info:active{
+  border-width: none !important;
+  border: none !important;
+}
+
+.btn-more-info:focus{
+  outline: none !important;
+}
